discord bot template with db connection

--- a/DiscordBot/.env
+++ b/DiscordBot/.env
@@ -1,4 +1,4 @@
-TOKEN=OTk5OTQ5NTc2NzE2OTU1NjQ4.GPU9uY.vvZ6tYll6b_J5TXHknq6H87bQJn6KlPZFys9Vw
+TOKEN=Warning Github
 DATABASE_HOST=localhost
 DATABASE_USER=root
 DATABASE_PASSWORD=spectrun
