new token (made a mistake)

--- a/DiscordBot/.env
+++ b/DiscordBot/.env
@@ -1,4 +1,4 @@
-TOKEN=OTk5OTQ5NTc2NzE2OTU1NjQ4.GICwUL.0Ut6Kg_18K65UCqoIBAK8Kixh5IocO1QlDUQog
+TOKEN=
 DATABASE_HOST=localhost
 DATABASE_USER=root
 DATABASE_PASSWORD=spectrun
