--- a/DiscordBot/.env
+++ b/DiscordBot/.env
@@ -1,6 +1,6 @@
-TOKEN=
+TOKEN=[insérer le token du Bot]
 DATABASE_HOST=localhost
-DATABASE_USER=root
-DATABASE_PASSWORD=spectrun
+DATABASE_USER=[insérer utilisateur de la bdd]
+DATABASE_PASSWORD=[insérer mot de passe de la bdd]
 DATABASE_NAME=laravel_api
 DATABASE_PORT=3306
